--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
             <div class="top-players">
                 <div class="player">
                     <img src="images/Ellipse.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abu Sfian</h3>
                 </div>
                 <div class="player">
                     <img src="images/Ellipse-1.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abul Kalam</h3>
                 </div>
                 <div class="player">
                     <img src="images/Ellipse-2.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abu Naser</h3>
                 </div>
                 <div class="player">
                     <img src="images/Ellipse-3.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abu Taher</h3>
                 </div>
                 <div class="player">
                     <img src="images/Ellipse-4.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abul Khair</h3>
                 </div>
                 <div class="player">
                     <img src="images/Ellipse-5.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Abdullah Imran</h3>
                 </div>
             </div>
         <hr>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="blog-info">
                         <h3>13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href=""> Danny Sapio</a></p>
+                        <p>By <a href=""> Abdullah Imran</a></p>
                     </div>
                 </article>
                 <article class="blog">
@@ -64,7 +64,7 @@
                     </div>
                     <div class="blog-info">
                         <h3>13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href=""> Danny Sapio</a></p>
+                        <p>By <a href=""> Abdullah Imran</a></p>
                     </div>
                 </article>
                 <article class="blog">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="blog-info">
                         <h3>13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href=""> Danny Sapio</a></p>
+                        <p>By <a href=""> Abdullah Imran</a></p>
                     </div>
                 </article>
                 <article class="blog">
@@ -82,7 +82,7 @@
                     </div>
                     <div class="blog-info">
                         <h3>13 of My Favorite UI/UX Goodies</h3>
-                        <p>By <a href=""> Danny Sapio</a></p>
+                        <p>By <a href=""> Abdullah Imran</a></p>
                     </div>
                 </article>
             </div>
@@ -94,7 +94,7 @@
                     <img src="images/Mask Group-3.png" alt="">
                     <div class="course-detail">
                         <h3>React Complete Guide 2022</h3>
-                        <p><a href="">Reed Krakoff.</a></p>
+                        <p><a href="">Abdullah Imran.</a></p>
                         <div class="course-info">
                             <div class="ratings">
                                 <i class="fas fa-star filled"></i>
@@ -114,7 +114,7 @@
                     <img src="images/Mask Group-4.png" alt="">
                     <div class="course-detail">
                         <h3>React Complete Guide 2022</h3>
-                        <p><a href="">Reed Krakoff.</a></p>
+                        <p><a href="">Abdullah Imran</a></p>
                         <div class="course-info">
                             <div class="ratings">
                                 <i class="fas fa-star filled"></i>
@@ -134,7 +134,7 @@
                     <img src="images/Mask Group-5.png" alt="">
                     <div class="course-detail">
                         <h3>React Complete Guide 2022</h3>
-                        <p><a href="">Reed Krakoff.</a></p>
+                        <p><a href="">Abdullah Imran</a></p>
                         <div class="course-info">
                             <div class="ratings">
                                 <i class="fas fa-star filled"></i>
